--- a/templates/index.html
+++ b/templates/index.html
@@ -293,7 +293,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-sm-6">
+				<div class="col-md-3 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i>1</i>
@@ -302,7 +302,7 @@
 						<p>Search for a desired flight on a desired date.</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6">
+				<div class="col-md-3 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i>2</i>
@@ -311,13 +311,23 @@
 						<p>Choose a flight that suits you the best.</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6">
+				<div class="col-md-3 col-sm-6">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i>3</i>
 						</span>
 						<h3>Book</h3>
 						<p>Confirm the flight, proceed to the payment stage, and Voila! Your flight is booked!.</p>
+					</div>
+				</div>
+
+				<div class="col-md-3 col-sm-6">
+					<div class="feature-center animate-box" data-animate-effect="fadeIn">
+						<span class="icon">
+							<i>4</i>
+						</span>
+						<h3>Fly</h3>
+						<p>You are now ready to start your adventure!</p>
 					</div>
 				</div>
 
