--- a/templates/index.html
+++ b/templates/index.html
@@ -232,7 +232,7 @@
     </ul>
     {% endif %}
 
-	<div class="gtco-section">
+	<div class="gtco-section section_bg">
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
