--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,16 +1,48 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-
+{% load crispy_forms_tags %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <center><h1>{% trans "Change Password" %}</h1>
+
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg)">
+		<div class="overlay"></div>
+		<div class="gtco-container">
+			<div class="row">
+				<div class="col-md-12 col-md-offset-0 text-center">
+					<div class="row row-mt-15em">
+
+						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
+							<h1 class="sign-in">Change Password</h1>
+						</div>
+
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</header>
+
+<div class="container gtco-section" style="
+    padding-top: 10px;
+">
+    <div class="row">
+      <div class="col-12">
+        <br>
+        <br>
+
+
+    <h1>{% trans "Change Password" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="cart-btn" name="action">{% trans "Change Password" %}</button>
-    </form> </center>
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-primary" name="action">{% trans "Change Password" %}</button>
+    </form>
+
+             </div>
+    </div>
+  </div>
 
 {% endblock %}
