Password reset UI

--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -14,7 +14,7 @@
 					<div class="row row-mt-15em">
 
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-							<h1 class="sign-in">Change Password</h1>
+							<h1 class="sign-in">{% trans "Change Password" %}</h1>
 						</div>
 
 					</div>
@@ -33,7 +33,6 @@
         <br>
 
 
-    <h1>{% trans "Change Password" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
