--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -2,12 +2,38 @@
 
 {% load i18n %}
 {% load account %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg)">
+		<div class="overlay"></div>
+		<div class="gtco-container">
+			<div class="row">
+				<div class="col-md-12 col-md-offset-0 text-center">
+					<div class="row row-mt-15em">
 
-    <h1>{% trans "Password Reset" %}</h1>
+						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
+							<h1 class="sign-in">{% trans "Password Reset" %}</h1>
+						</div>
+
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</header>
+
+   <div class="container gtco-section" style="
+    padding-top: 10px;
+">
+    <div class="row">
+      <div class="col-12">
+        <br>
+        <br>
+
+
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
@@ -16,9 +42,16 @@
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        {{ form|crispy }}
+        <input class="btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+
+         </div>
+
+    </div>
+  </div>
+
+
 {% endblock %}
