Special assistance images added

--- a/templates/special_assistance.html
+++ b/templates/special_assistance.html
@@ -84,7 +84,7 @@
 
 
                         <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
-                            <img src="{% static 'images/img_1.jpg' %}" >
+                            <img width="600" src="{% static 'images/wheelchair.jpg' %}" >
                         </div>
 
 
@@ -98,7 +98,7 @@
                     <div class="row">
 
                         <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
-                            <img src="{% static 'images/img_1.jpg' %}" >
+                            <img width="400" src="{% static 'images/wheelchair2.jpg' %}" >
                         </div>
 
                         <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
@@ -146,7 +146,7 @@
 
 
                         <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
-                            <img src="{% static 'images/img_1.jpg' %}" >
+                            <img width="350" src="{% static  'images/minor.jpg' %}" >
                         </div>
 
 
@@ -160,7 +160,7 @@
                     <div class="row">
 
                         <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
-                            <img src="{% static 'images/img_1.jpg' %}" >
+                            <img width="650" src="{% static 'images/expecting_mother.jpg' %}" >
                         </div>
 
                         <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
